--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4",
 		"@typescript-eslint/parser": "^4",
+		"cssnano": "^4.1.10",
 		"eslint": "^7",
 		"minimist": ">=1.2.2",
 		"parcel-plugin-clean-easy": "^1.0.2",
