--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
 		},
 		"typeRoots": [
 			"node_modules/@types",
-			"node_module/phaser/types"
+			"node_module/phaser/types",
+			"./src/types"
 		],
 		"types": [
 			"phaser"
