--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"typescript": "^4"
 	},
 	"dependencies": {
-		"phaser": "3.24.1"
+		"phaser": "3.24.1",
+		"webfontloader": "^1.6.28"
 	},
 	"parcelCleanPaths": [
 		"dist"
