Prep for a client/server model. - Move all client files into a client directory. - Prepare package.json for some of the addl required libraries.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"sourceMap": true,
-		"baseUrl": "./src",
+		"baseUrl": "./src/client",
 		"paths": {
 		  "~/*": ["./*"]
 		},
@@ -27,6 +27,6 @@
 		]
 	},
 	"include": [
-		"src/**/*"
+		"src/client/**/*"
 	]
 }
