--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.2.0",
 	"description": "A test game while learning Phaser 3.",
 	"scripts": {
-		"start": "parcel src/index.html -p 4000",
-		"build": "parcel build src/index.html --out-dir dist",
+		"start": "parcel src/client/index.html -p 4000",
+		"build": "parcel build src/client/index.html --out-dir dist",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
 	},
@@ -23,9 +23,14 @@
 		"minimist": ">=1.2.2",
 		"parcel-plugin-clean-easy": "^1",
 		"parcel-plugin-static-files-copy": "^2",
+		"ts-node": "^9.1.1",
 		"typescript": "^4"
 	},
 	"dependencies": {
+		"@colyseus/monitor": "^0.14.0",
+		"colyseus": "^0.14.6",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
 		"phaser": "3.24.1",
 		"webfontloader": "^1.6.28"
 	},
