Gentle refactoring of the client code. - Custom types are no longer in a global *.d.ts file. - Each character sets its name in the constructor. - Parent Player, Enemy, and Item classes have an "id" property that is set to a randomized ID. This can be used for future MP handling. - Item class emits event when "use" happens. - Player class emits event when "shoot" happens.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,20 +13,15 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"sourceMap": true,
-		"baseUrl": "./src/client",
+		"baseUrl": ".",
 		"paths": {
-		  "~/*": ["./*"]
+		  "@/*": ["src/client/*"]
 		},
-		"typeRoots": [
-			"node_modules/@types",
-			"node_module/phaser/types",
-			"./src/types"
-		],
 		"types": [
 			"phaser"
 		]
 	},
 	"include": [
-		"src/client/**/*"
+		"src/client/**/*.ts"
 	]
 }
