--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "A test game while learning Phaser 3.",
 	"scripts": {
 		"server": "ts-node --project tsconfig.server.json src/server",
+		"serverdev": "ts-node-dev --project tsconfig.server.json --watch src/server src/server",
 		"start": "parcel src/client/index.html -p 4000",
-		"build": "parcel build src/client/index.html --out-dir dist",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
+		"build": "parcel build src/client/index.html --out-dir dist"
 	},
 	"author": "joshuacurtiss",
 	"license": "MIT",
@@ -26,6 +25,7 @@
 		"parcel-plugin-clean-easy": "^1",
 		"parcel-plugin-static-files-copy": "^2",
 		"ts-node": "^9",
+		"ts-node-dev": "^1",
 		"typescript": "^4"
 	},
 	"dependencies": {
