--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"server": "ts-node --project tsconfig.server.json src/server",
 		"serverdev": "ts-node-dev --project tsconfig.server.json --watch src/server src/server",
-		"build": "parcel build src/client/index.html --out-dir dist",
+		"build": "parcel build src/client/index.html --out-dir dist && minify-json dist",
 		"start": "parcel src/client/index.html -p 4000",
 		"watch": "parcel watch src/client/index.html --out-dir dist"
 	},
@@ -22,6 +22,7 @@
 		"colyseus.js": "^0.14.1",
 		"cssnano": "^4",
 		"eslint": "^7",
+		"minify-json": "^1.0.0",
 		"minimist": "^1",
 		"parcel-plugin-clean-easy": "^1",
 		"parcel-plugin-static-files-copy": "^2",
