Better handling of music media. - Now stored in resources/music - Converted to ogg, and mp3 version also copied - Added world 2 music - Some refactoring of the SoundManager to handle both normal audio and audio sprites, and to know about the music files.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"serverdev": "ts-node-dev --project tsconfig.server.json --watch src/server src/server",
 		"build": "npm run clean && npm run pack && npm run bundle && npm run minify",
 		"bundle": "parcel build src/client/index.html --out-dir dist",
-		"clean": "rimraf public/media/sfx.* public/media/textures.*",
+		"clean": "rimraf public/media/*.*",
 		"pack": "ts-node --project tsconfig.server.json pack",
 		"minify": "minify-json dist",
 		"start": "npm run pack && parcel src/client/index.html -p 4000",
@@ -28,6 +28,7 @@
 		"colyseus.js": "^0.14.1",
 		"cssnano": "^4",
 		"eslint": "^7",
+		"fluent-ffmpeg": "^2.1.2",
 		"free-tex-packer-core": "^0.3.2",
 		"minify-json": "^1.0.0",
 		"minimist": "^1",
