--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"free-tex-packer-core": "^0.3.2",
 		"minify-json": "^1",
 		"minimist": "^1",
+		"parcel": "1.12.3",
 		"parcel-plugin-clean-easy": "^1",
 		"parcel-plugin-static-files-copy": "^2",
 		"rimraf": "^3",
