--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"server": "ts-node --project tsconfig.server.json src/server",
 		"serverdev": "ts-node-dev --project tsconfig.server.json --watch src/server src/server",
 		"build": "npm run clean && npm run pack && npm run bundle && npm run minify",
+		"build:docker": "docker build . -t joshuacurtiss/dungeon-crawler",
 		"bundle": "parcel build --public-url '.' src/client/index.html --out-dir dist",
 		"clean": "rimraf public/media/*.*",
 		"pack": "ts-node --project tsconfig.server.json pack",
@@ -35,18 +36,18 @@
 		"parcel": "1.12.3",
 		"parcel-plugin-clean-easy": "^1",
 		"parcel-plugin-static-files-copy": "^2",
+		"phaser": "3.24.1",
 		"rimraf": "^3",
-		"ts-node": "^9",
 		"ts-node-dev": "^1",
-		"typescript": "^4"
+		"webfontloader": "^1"
 	},
 	"dependencies": {
 		"@colyseus/monitor": "^0.14.3",
 		"colyseus": "^0.14.11",
 		"cors": "^2",
 		"express": "^4",
-		"phaser": "3.24.1",
-		"webfontloader": "^1"
+		"ts-node": "^9",
+		"typescript": "^4"
 	},
 	"parcelCleanPaths": [
 		"dist"
